                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) syslog logging: Remove stray ", referer" at the end of some messages.
     [Jeff Trawick]

  *) configure: Fix processing of --disable-FEATURE for various features.
     [Jeff Trawick]

  *) "Iterate" directives: Report an error if no arguments are provided.
     [Jeff Trawick]

  *) htpasswd, htdbm: Optionally read passwords from stdin, as more
     secure alternative to -b.  PR 40243. [Adomas Paltanavicius <adomas
     paltanavicius gmail com>, Stefan Fritsch]

  *) htpasswd, htdbm: Add support for bcrypt algorithm (requires
     apr-util 1.5 or higher). PR 49288. [Stefan Fritsch]

  *) htpasswd, htdbm: Put full 48bit of entropy into salt, improve
     error handling. Add some of htpasswd's improvements to htdbm,
     e.g. warn if password is truncated by crypt(). [Stefan Fritsch]

  *) ab: add TLS1.1/TLS1.2 options to -f switch, and adapt output
     to more accurately report the negotiated protocol. PR 53916.
     [Nicolás Pernas Maradei <nico emutex com>, Kaspar Brand]

  *) mod_systemd: New module, for integration with systemd on Linux.
     [Jan Kaluza <jkaluza redhat.com>]

  *) core: ErrorDocument now works for requests without a Host header.
     PR 48357.  [Jeff Trawick]

  *) --with-module: Fix failure to integrate them into some existing
     module directories.  PR 40097.  [Jeff Trawick]

  *) mod_headers: New params: %l for load averages, %i for an
     idle percentage rating of httpd, and %b for a busy percentage
     rating. [Jim Jagielski]

  *) core: New functions to obtain load parameters: ap_get_sload()
     and ap_get_loadavg(). [Jim Jagielski]

  *) mod_cache_socache: New cache implementation backed by mod_socache
     that replaces mod_mem_cache removed from httpd v2.2. [Graham
     Leggett]

  *) mod_auth_form: Support the expr parser in the
     AuthFormLoginRequiredLocation, AuthFormLoginSuccessLocation and